--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://dl.bintray.com/zaiqiangxiaohuli/anZhuo" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.0'
         classpath 'com.novoda:bintray-release:0.8.1'
-
+        classpath 'com.zq.sdklib:zqsdk:+'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,6 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://dl.bintray.com/zaiqiangxiaohuli/anZhuo" }
     }
 }
 
