--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,9 @@ buildscript {
         maven { url "https://dl.bintray.com/zaiqiangxiaohuli/anZhuo" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.novoda:bintray-release:0.8.1'
-        classpath 'com.zq.sdklib:zqsdk:+'
+        classpath 'com.zq.sdklib:zqsdk:1.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
