--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,18 @@
 apply plugin: 'com.android.application'
 
 //本地
-//buildscript {
-//    repositories {
-//        maven {
-//            url uri('../repo')
-//        }
-//    }
-//    dependencies {
-//        classpath 'com.zq.sdklib:zqsdk:1.0.1'
-//    }
-//}
+buildscript {
+    repositories {
+        maven {
+            url uri('../repo')
+        }
+    }
+    dependencies {
+        classpath "com.zq.sdklib:zqsdk:${rootProject.ext.android["versionName"]}"
+    }
+}
 
 apply plugin: 'com.zq.sdk'
-
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -32,14 +31,55 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     api rootProject.ext.dependencies["appcompat-v7"]
+//    api 'com.ziq.base:base:3.1.2'
+//    api 'com.zq.customviewlib:customviewlib:2.0.4'
+}
+
+
+ZQSDK {
+    println "ZQSDK 赋值"
+    param1 'app param1'
+    param2 'app param2'
+    param4 'app param4'
+    Internal {
+        nestParam1 'app nestParam1'
+        nestParam2 'app nestParam2'
+    }
+    testDomain {
+        domain2 {
+            msg "This is domain2"
+        }
+        domain1 {
+            msg "This is domain1"
+        }
+        domain3 {
+            msg "This is domain3"
+        }
+    }
+
+    //添加了基础库依赖，默认是添加最新版 “+”
+    BaseLib{
+        versionName '3.1.2'
+    }
+    CustomViewLib{}
+
+    //会移除 基础库依赖
+//    configurations.all {
+//        exclude group: 'com.ziq.base', module: 'base'
+//    }
 }
