--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.novoda:bintray-release:0.8.1'
-        classpath 'com.zq.sdklib:zqsdk:1.0.1'
+//        classpath 'com.zq.sdklib:zqsdk:1.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,6 +21,7 @@ allprojects {
         google()
         jcenter()
         maven { url "https://dl.bintray.com/zaiqiangxiaohuli/anZhuo" }
+        maven { url "https://jitpack.io" }
     }
 }
 
