--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,17 @@ apply from: "config.gradle"
 buildscript {
     
     repositories {
-        maven {
-            url './repo'
-        }
         google()
         jcenter()
         maven { url "https://dl.bintray.com/zaiqiangxiaohuli/anZhuo" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'com.novoda:bintray-release:0.8.1'
-//        classpath 'com.zq.sdklib:zqsdk:1.0.1'
+        classpath 'com.zq.sdklib:zqsdk:3.3.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,9 +21,6 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            url './repo'
-        }
         google()
         jcenter()
         maven { url "https://dl.bintray.com/zaiqiangxiaohuli/anZhuo" }
