--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,5 @@
 apply plugin: 'com.android.application'
 
-//本地
-buildscript {
-    repositories {
-        maven {
-            url uri('../repo')
-        }
-    }
-    dependencies {
-        classpath "com.zq.sdklib:zqsdk:${rootProject.ext.android["versionName"]}"
-    }
-}
-
-apply plugin: 'com.zq.sdk'
-
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     buildToolsVersion rootProject.ext.android["buildToolsVersion"]
@@ -23,7 +9,7 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -36,21 +22,20 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    api rootProject.ext.dependencies["appcompat-v7"]
-//    api 'com.ziq.base:base:3.1.2'
-//    api 'com.zq.customviewlib:customviewlib:2.0.4'
+//    api 'com.zq.base:base:3.3.2'
+//    api 'com.zq.customviewlib:customviewlib:3.3.0'
 }
 
-
+apply plugin: 'com.zq.sdk'
 ZQSDK {
     println "ZQSDK 赋值"
     param1 'app param1'
@@ -74,12 +59,14 @@ ZQSDK {
 
     //添加了基础库依赖，默认是添加最新版 “+”
     BaseLib{
-        versionName '3.1.2'
+        versionName '3.3.2'
     }
-    CustomViewLib{}
+    CustomViewLib{
+        versionName '3.3.2'
+    }
 
     //会移除 基础库依赖
 //    configurations.all {
-//        exclude group: 'com.ziq.base', module: 'base'
+//        exclude group: 'com.android.support', module: 'support-compat'
 //    }
 }
