--- a/config.gradle
+++ b/config.gradle
@@ -1,34 +1,54 @@
 ext {
     android = [
-            compileSdkVersion: 28,
-            buildToolsVersion: "28.0.3",
+            compileSdkVersion: 29,
+            buildToolsVersion: "29.0.1",
             minSdkVersion    : 19,
-            targetSdkVersion : 28,
-            versionCode      : 200,
-            versionName      : "2.0.0"
+            targetSdkVersion : 29,
+            versionCode      : 332,
+            versionName      : "3.3.2"
     ]
 
     version = [
-            androidSupportSdkVersion: "28.0.0",
-            retrofitSdkVersion      : "2.4.0",
-            dagger2SdkVersion       : "2.15",
-            glideSdkVersion         : "4.6.1",
-            butterknifeSdkVersion   : "8.8.1",
-            rxlifecycleSdkVersion   : "1.0",
-            rxlifecycle2SdkVersion  : "2.2.1",
-            espressoSdkVersion      : "3.0.1",
-            canarySdkVersion        : "1.5.4"
+            glideSdkVersion                   : "4.11.0",
+            butterknifeSdkVersion             : "10.2.1",
+            dagger2SdkVersion                 : "2.21",
+            espressoSdkVersion                : "3.0.1",
+            canarySdkVersion                  : "1.5.4",
+            retrofitSdkVersion                : "2.5.0",
+            rxjava2SdkVersion                 : "2.2.2",
+            rxandroidSdkVersion               : "2.1.0",
+            adapterRxjava2SdkVersion          : "2.4.0",
+            converterGsonSdkVersion           : "2.4.0",
+            loggingInterceptorSdkVersion      : "3.9.0",
+            rxlifecycleVersion                : "3.1.0",
     ]
 
     dependencies = [
             //support
-            "appcompat-v7"                  : "com.android.support:appcompat-v7:${version["androidSupportSdkVersion"]}",
-            "design"                        : "com.android.support:design:${version["androidSupportSdkVersion"]}",
-            "support-v4"                    : "com.android.support:support-v4:${version["androidSupportSdkVersion"]}",
-            "cardview-v7"                   : "com.android.support:cardview-v7:${version["androidSupportSdkVersion"]}",
-            "annotations"                   : "com.android.support:support-annotations:${version["androidSupportSdkVersion"]}",
-            "recyclerview-v7"               : "com.android.support:recyclerview-v7:${version["androidSupportSdkVersion"]}",
-            "constraint-layout"             : "com.android.support.constraint:constraint-layout:1.1.2"
+            "appcompat"                      : "androidx.appcompat:appcompat:1.0.0-beta01",
+            "recyclerview"                   : "androidx.recyclerview:recyclerview:1.0.0-beta01",
+            "cardview"                      : "androidx.cardview:cardview:1.0.0",
+            "constraintlayout"               : "androidx.constraintlayout:constraintlayout:1.1.3",
+
+            "dagger2"                       : "com.google.dagger:dagger:${version["dagger2SdkVersion"]}",
+            "dagger2-compiler"              : "com.google.dagger:dagger-compiler:${version["dagger2SdkVersion"]}",
+            "dagger2-android"               : "com.google.dagger:dagger-android:${version["dagger2SdkVersion"]}",
+            "dagger2-android-support"       : "com.google.dagger:dagger-android-support:${version["dagger2SdkVersion"]}",
+            "dagger2-android-processor"     : "com.google.dagger:dagger-android-processor:${version["dagger2SdkVersion"]}",
+            "butterknife"                   : "com.jakewharton:butterknife:${version["butterknifeSdkVersion"]}",
+            "butterknife-compiler"          : "com.jakewharton:butterknife-compiler:${version["butterknifeSdkVersion"]}",
+            "retrofit"                      : "com.squareup.retrofit2:retrofit:${version["retrofitSdkVersion"]}",
+            "rxjava2"                       : "io.reactivex.rxjava2:rxjava:${version["rxjava2SdkVersion"]}",
+            "rxandroid"                     : "io.reactivex.rxjava2:rxandroid:${version["rxandroidSdkVersion"]}",
+            "adapter-rxjava2"               : "com.squareup.retrofit2:adapter-rxjava2:${version["adapterRxjava2SdkVersion"]}",
+            "converter-gson"                : "com.squareup.retrofit2:converter-gson:${version["converterGsonSdkVersion"]}",
+            "logging-interceptor"           : "com.squareup.okhttp3:logging-interceptor:${version["loggingInterceptorSdkVersion"]}",
+            "glide"                         : "com.github.bumptech.glide:glide:${version["glideSdkVersion"]}",
+            "glide-compiler"                : "com.github.bumptech.glide:compiler:${version["glideSdkVersion"]}",
+            "kprogresshud"                  : "com.kaopiz:kprogresshud:1.2.0",
+            "rxlifecycle"                   : "com.trello.rxlifecycle3:rxlifecycle:${version["rxlifecycleVersion"]}",
+            "rxlifecycle-android"           : "com.trello.rxlifecycle3:rxlifecycle-android:${version["rxlifecycleVersion"]}",
+            "rxlifecycle-components"        : "com.trello.rxlifecycle3:rxlifecycle-components:${version["rxlifecycleVersion"]}",
     ]
 
 
